moving back to Java 8 to avoid breaking compatibility with existing third party tools and workflows